/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.3.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()

    maven { url 'https://papermc.io/repo/repository/maven-public/' }
}

dependencies {
    // // Use JUnit Jupiter for testing.
    // testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'

    // // This dependency is used by the application.
    // implementation 'com.google.guava:guava:30.1.1-jre'

    // compileOnly 'io.papermc.paper:paper-api:1.17-R0.1-SNAPSHOT'
    //compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'

    // Add generator for plugin.yml

    compileOnly 'org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT'
    annotationProcessor 'org.spigotmc:plugin-annotations:1.2.3-SNAPSHOT'
}

// tasks.named('test') {
//     // Use JUnit Platform for unit tests.
//     useJUnitPlatform()
// }

java {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}
